# opticia

./: .gitignore  README.md
.github/workflows/: backend-deploy.yml  backend-test.yml  ci.yml  deploy.yml  frontend-deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  test_context_e2e.py  test_context_preservation.py  test_context_reconnect.py  test_context_video_e2e.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: admin.py  health.py  metrics.py  reports.py  router.py  sessions.py
backend/app/core/: __init__.py  config.py  logging.py  rate_limit.py  request_logging.py  supabase.py
backend/app/models/: base.py  metrics.py  session.py  websocket.py
backend/app/prompts/: __init__.py
backend/app/services/: gemini_service.py  metrics_service.py  report_service.py  session_service.py
backend/app/services/admin/: __init__.py  dashboard.py  metrics_collector.py
backend/app/services/resilience/: __init__.py  fallback.py  network.py  preferences.py
backend/app/services/safety/: __init__.py  confidence.py  disclaimers.py  layer.py  risk_assessment.py
backend/app/services/tools/: __init__.py  deep_research.py  init_tools.py  registry.py  vision_tools.py  web_search.py
backend/app/ws/: connection.py  router.py
backend/app/ws/handlers/: __init__.py  gemini.py  resilience.py  session.py  tools.py  vision.py
backend/tests/: conftest.py  test_health.py  test_websocket.py
frontend/: .env.example  Dockerfile  next.config.ts  package.json
frontend_lovable/next-app/: .dockerignore  (+7 more)
supabase/: README.md
(+58 files in other folders)
